# pi-config

./: .gitignore  .impeccable.md  .pi-lsp.json  AGENTS.md  QUICKFIX.md  README.md  autoresearch.bench.sh  autoresearch.checks.sh  autoresearch.ideas.md  autoresearch.jsonl  autoresearch.stress.sh  biome.json  caveman.json  flake.nix  install.sh  lsp.json  mcp.json  mcporter.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  settings.json  skills  tsconfig.json  vitest.config.ts
agents/: Explore.md  Plan.md  (+17 more)
self-evolve/: .envrc  .gitignore  AGENTS.md  DESIGN.md  PRODUCT.md  README.md  flake.nix  pyproject.toml
self-evolve/docs/: dashboard-contract-matrix.md  dashboard-design-source.md  data-contract.md  session-log-schema-notes.md  test-harness.md
self-evolve/src/self_evolve/: __init__.py
self-evolve/src/self_evolve/dashboard/: __init__.py  cli.py  loader.py  output.py  render.py  view_models.py
self-evolve/src/self_evolve/dashboard/static/: dashboard.css
self-evolve/src/self_evolve/dashboard/templates/: dashboard.html.jinja
self-evolve/src/self_evolve/extractor/: __init__.py  cli.py  metrics.py  models.py  parser.py  persistence.py
self-evolve/tests/: conftest.py  test_cli_smoke.py  test_dashboard_baseline_comparison.py  test_dashboard_edge_cases.py  test_dashboard_session_detail.py  test_dashboard_session_list.py  test_metrics.py  test_package_layout.py  test_parser.py
self-evolve/tests/fixtures/: README.md  parent-clean.sample.jsonl  parent-malformed-truncated.sample.jsonl  parent-with-sidechain.sample.jsonl  sidechain-present.sample.output
(+401 files in other folders)
