[project]
name = "self-evolve"
version = "0.1.0"
description = "Module 1 scaffold for Panda Harness self-evolution"
requires-python = ">=3.13"
dependencies = ["jinja2>=3.1"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"self_evolve.dashboard" = ["templates/*.html.jinja", "static/*.css"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
